[gd_scene load_steps=15 format=2]

[ext_resource path="res://objects/Laser.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/ProgressBar.gd" type="Script" id=2]
[ext_resource path="res://objects/Reticle.gd" type="Script" id=3]
[ext_resource path="res://objects/Obstacles.gd" type="Script" id=4]
[ext_resource path="res://screens/BuildScreen.gd" type="Script" id=5]
[ext_resource path="res://graphics/reticle.png" type="Texture" id=6]
[ext_resource path="res://graphics/moon.png" type="Texture" id=7]
[ext_resource path="res://screens/Main.gd" type="Script" id=8]
[ext_resource path="res://objects/Lasers.gd" type="Script" id=9]
[ext_resource path="res://objects/Moon.gd" type="Script" id=10]
[ext_resource path="res://objects/Controls.gd" type="Script" id=11]
[ext_resource path="res://resources/base_theme.tres" type="Theme" id=12]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="BackgroundElements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BackgroundElements"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Moon" type="Area2D" parent="."]
position = Vector2( 640, 683 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Moon"]
scale = Vector2( 3, 1 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Moon"]
polygon = PoolVector2Array( -640, 24, 0, -16, 640, 24, 640, 40, -640, 40 )

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Reticle" type="Area2D" parent="Player"]
position = Vector2( 624.705, 308.348 )
input_pickable = false
monitoring = false
monitorable = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Player/Reticle"]
texture = ExtResource( 6 )

[node name="Lasers" type="Node2D" parent="Player"]
script = ExtResource( 9 )

[node name="LaserLeft" parent="Player/Lasers" instance=ExtResource( 1 )]
position = Vector2( 120, 670 )
initial = true

[node name="LaserRight" parent="Player/Lasers" instance=ExtResource( 1 )]
position = Vector2( 1150, 670 )
initial = true

[node name="AI" type="Node2D" parent="Player"]

[node name="Obstacles" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Obstacles"]
wait_time = 2.75
autostart = true

[node name="Timer2" type="Timer" parent="Obstacles"]
wait_time = 3.25
autostart = true

[node name="WaveProgress" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayScreen" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PlayScreen"]
margin_right = 91.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/PlayScreen/VBoxContainer"]
margin_right = 103.0
margin_bottom = 19.0
text = "Moon Stability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="UI/PlayScreen/VBoxContainer"]
margin_top = 23.0
margin_right = 103.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
value = 100.0
percent_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/PlayScreen"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -118.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/PlayScreen/VBoxContainer2"]
margin_right = 118.0
margin_bottom = 19.0
text = "Wave 1 Progress"

[node name="WaveStatus" type="ProgressBar" parent="UI/PlayScreen/VBoxContainer2"]
margin_top = 23.0
margin_right = 118.0
margin_bottom = 35.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
percent_visible = false

[node name="BuildScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 12 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Upgrade" type="PanelContainer" parent="UI/BuildScreen"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -63.0
margin_right = 107.0
margin_bottom = 63.0
grow_vertical = 2
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vbox" type="VBoxContainer" parent="UI/BuildScreen/Upgrade"]
margin_left = 7.0
margin_top = 7.0
margin_right = 100.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildPanel" type="PanelContainer" parent="UI/BuildScreen"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildOptions" type="VBoxContainer" parent="UI/BuildScreen/BuildPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 98.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/BuildScreen/BuildPanel/BuildOptions"]
margin_right = 91.0
margin_bottom = 19.0
text = "Build"

[node name="Cannon" type="Button" parent="UI/BuildScreen/BuildPanel/BuildOptions"]
margin_top = 23.0
margin_right = 91.0
margin_bottom = 48.0
hint_tooltip = "Build a new manually firing Cannon"
text = "Cannon (2)"

[node name="Sentry" type="Button" parent="UI/BuildScreen/BuildPanel/BuildOptions"]
margin_top = 52.0
margin_right = 91.0
margin_bottom = 77.0
hint_tooltip = "Build a cannon backed by an automatic AI"
text = "Sentry (2)"

[node name="NextWaveButton" type="Button" parent="UI/BuildScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = -10.0
margin_right = 40.5
margin_bottom = 10.0
text = "Next Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="PanelContainer" parent="UI/BuildScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.5
margin_right = 81.5
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BuildScreen/TopPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="UI/BuildScreen/TopPanel/VBoxContainer"]
margin_right = 164.0
margin_bottom = 19.0
text = "Upgrade Mode Enabled"

[node name="PointsLabel" type="Label" parent="UI/BuildScreen/TopPanel/VBoxContainer"]
margin_top = 23.0
margin_right = 164.0
margin_bottom = 42.0
text = "Build Points: "
align = 1

[node name="PlacementTip" type="Label" parent="UI/BuildScreen"]
visible = false
margin_left = 551.377
margin_top = 494.441
margin_right = 745.377
margin_bottom = 535.441
text = "Left Click to place
Right Click to cancel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="upgrade_changed" from="." to="UI/BuildScreen" method="_on_Game_upgrade_changed"]
[connection signal="area_entered" from="Moon" to="Moon" method="_on_Moon_area_entered"]
[connection signal="stability_changed" from="Moon" to="UI/PlayScreen/VBoxContainer/ProgressBar" method="_on_Moon_stability_changed"]
[connection signal="control_event" from="Player" to="UI/BuildScreen" method="_on_Player_control_event"]
[connection signal="round_end" from="Obstacles" to="." method="_on_Obstacles_round_end"]
[connection signal="round_end" from="Obstacles" to="Player" method="_on_Obstacles_round_end"]
[connection signal="timeout" from="Obstacles/Timer" to="Obstacles" method="_on_Timer_timeout"]
[connection signal="timeout" from="Obstacles/Timer2" to="Obstacles" method="_on_Timer_timeout"]
[connection signal="timeout" from="WaveProgress" to="Obstacles" method="_on_WaveProgress_timeout"]
[connection signal="died" from="UI/PlayScreen/VBoxContainer/ProgressBar" to="." method="_on_ProgressBar_died"]
[connection signal="pressed" from="UI/BuildScreen/BuildPanel/BuildOptions/Cannon" to="UI/BuildScreen" method="_on_CannonButton_pressed"]
[connection signal="pressed" from="UI/BuildScreen/BuildPanel/BuildOptions/Sentry" to="UI/BuildScreen" method="_on_SentryButton_pressed"]
[connection signal="pressed" from="UI/BuildScreen/NextWaveButton" to="UI/BuildScreen" method="_on_NextWaveButton_pressed"]
[connection signal="pressed" from="UI/BuildScreen/NextWaveButton" to="Obstacles" method="_on_NextWaveButton_pressed"]
[connection signal="pressed" from="UI/BuildScreen/NextWaveButton" to="." method="_on_NextWaveButton_pressed"]
[connection signal="pressed" from="UI/BuildScreen/NextWaveButton" to="Player" method="_on_NextWaveButton_pressed"]
